App - 사용자 입력 메서드 수정 Calculator - 목록 조회 시 10개까지만 조회되며, 11개가 되면 가장 처음 등록한 연산 기록 자동 삭제되도록 수정